# trending-homebrew

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  question.md
.github/workflows/: codacy.yml  codeql.yml  ethicalcheck.yml  github-actions.yml  ossar.yml  safety.yml  tests.yml
ci/: bootstrap.py  requirements.txt
ci/templates/: .appveyor.yml  .travis.yml  tox.ini
docker/: README.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/reference/: index.rst  trending_homebrew.rst
requirements/: base.in  base.txt  development.in  development.txt  documentation.in  documentation.txt  production.txt  test.in  test.txt
src/trending_homebrew/: __init__.py  __main__.py  _trending_homebrew.c  cli.py  gui.py  trending_homebrew.py
src/trending_homebrew/tests/: test_utils.py
tests/: __init__.py  conftest.py  test_main.py  test_trending_homebrew.py
