[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "setuptools>=30.3.0",
  "wheel",
  "setuptools_scm>=3.3.1",
  "poetry-core>=1.0.0"
]

[project]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["requests", 'importlib-metadata; python_version>"3.7"']
description = "Tool for identifying trending Homebrew formulae, casks, and build errors."
dynamic = ["version", "readme"]
keywords = [
  "bash",
  "shell",
  "zshs",
  "python3",
  "brew",
  "Homebrew",
  "macOS",
  "defaults",
  "scripts",
  "automation",
  "setup",
  "dotfiles",
  "formulae",
  "formula",
  "casks",
  "cask",
  "build",
  "builds",
  "error",
  "errors",
  "count",
  "counts",
  "installs",
  "items",
  "trends",
  "trending",
  "top",
  "brews",
  "tap",
  "taps",
  "cli",
  "python",
  "package",
  "PyPI",
  "pip",
  "johnpatrickroach",
  "better-wealth",
  "trending-homebrew",
  "trending_homebrew",
  "install"
]
license = {text = "MIT License"}
name = "trending-homebrew"
requires-python = ">=3.7"

[project.scripts]
cli-name = "trending_homebrew.trending_homebrew"

[tool.bandit]
exclude_dirs = ["tests", "src/trending_homebrew/tests"]

[tool.black]
color = true
exclude = '''
/(
    \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | .coveragerc

)/
'''
include = '\.pyi?$'
line-length = 140
skip-magic-trailing-comma = true
skip-string-normalization = true
target-version = ['py37']

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
source = ["trending_homebrew", "tests"]

[tool.isort]
color_output = true
default_section = "LOCALFOLDER"
ensure_newline_before_comments = true
float_to_top = true
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
indent = 4
known_third_party = [
  "numpy",
  "pandas",
  "keras",
  "tensorflow",
  "sklearn",
  "matplotlib",
  "scipy"
]
known_typing = [
  "typing",
  "types",
  "typing_extensions",
  "mypy",
  "mypy_extensions"
]
line_length = 140
lines_after_imports = 2
multi_line_output = 3
profile = "black"
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
use_parentheses = true

[tool.mypy]
allow_redefinition = false
cache_dir = ".cache/mypy/"
check_untyped_defs = true
color_output = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["John Patrick Roach <contact@johnpatrickroach.com>"]
classifiers = [
  # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Ruby",
  # uncomment if you test on these interpreters:
  # "Programming Language :: Python :: Implementation :: IronPython",
  # "Programming Language :: Python :: Implementation :: Jython",
  # "Programming Language :: Python :: Implementation :: Stackless",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
  "Topic :: System :: Systems Administration"
]
description = "Trending Homebrew: Tool for identifying trending Homebrew formulae, casks, and build errors."
documentation = "https://trending-homebrew.readthedocs.io"
homepage = "https://github.com/johnpatrickroach/trending-homebrew"
keywords = [
  "bash",
  "shell",
  "zshs",
  "python3",
  "brew",
  "Homebrew",
  "macOS",
  "defaults",
  "scripts",
  "automation",
  "setup",
  "dotfiles",
  "formulae",
  "formula",
  "casks",
  "cask",
  "build",
  "builds",
  "error",
  "errors",
  "count",
  "counts",
  "installs",
  "items",
  "trends",
  "trending",
  "top",
  "brews",
  "tap",
  "taps",
  "cli",
  "python",
  "package",
  "PyPI",
  "pip",
  "johnpatrickroach",
  "better-wealth",
  "trending-homebrew",
  "trending_homebrew",
  "install"
]
license = "MIT"
name = "trending-homebrew"
packages = [{include = "trending_homebrew"}]
readme = "README.rst"
repository = "https://github.com/johnpatrickroach/trending-homebrew"
version = "0.1.0"

[tool.poetry.dependencies]
click = ">=8.0.1"
importlib_metadata = {version = "^4.5.0", python = "<3.8"}
minilog = "*"
python = "^3.7"
python-dotenv = "^0.18.0"
rich = "^10.14.0"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
MacFSEvents = {version = "*", platform = "darwin"}
bandit = "^1.7.4"
black = {version = "^23.1a1", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^7.0.3"}
coverage-badge = "^1.1.0"
coveragespace = "^6.0"
darglint = ">=1.8.1"
doc8 = "^1.0"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-pytest-style = "^1.6"
flake8-rst-docstrings = ">=0.2.5"
freezegun = "*"
furo = ">=2021.11.12"
ipython = "^7.12.0"
isort = {extras = ["colors"], version = "^5.11.4"}
m2r2 = "^0.3"
mkdocs = "~1.3"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
myst-parser = {version = ">=0.16.1"}
pep8-naming = ">=0.12.1"
pre-commit = "^2.21.0"
pre-commit-hooks = ">=4.1.0"
ptpython = "^3.0.19"
pydocstyle = "^6.2.2"
pygments = "^2.11.1"
pyinstaller = "*"
pylint = "^2.15.9"
pync = {version = "*", platform = "darwin"}
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-html = "^3.2.0"
pytest-random = "*"
pytest-randomly = "^3.12"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
sniffer = "*"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = "^1.19"
sphinx-click = ">=3.0.2"
tomli = "^2.0"
typeguard = ">=2.13.3"
wrapt = "*"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
trending-homebrew = "trending_homebrew.__main__:main"

[tool.poetry.urls]
Changelog = "https://github.com/johnpatrickroach/trending-homebrew/releases"

[tool.pytest.ini_options]
# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--show-capture=log",
  "--cov-report=html",
  "--cov-report=term-missing:skip-covered",
  "--no-cov-on-fail"
]
cache_dir = ".cache/pytest/"
doctest_optionflags = [
  "NUMBER",
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL"
]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = [
  "hooks",
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "USAGE.rst"]}
version = {attr = "trending_homebrew.VERSION"}

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
