[metadata]
name = trending-homebrew

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:trending_homebrew/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = google

[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 140
sphinx = true

[flake8]
max-line-length = 140
exclude = .git,.tox,.eggs,*.egg,ci/templates,build,dist,__pycache__,.venv,docs,old
ignore = E203, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4
show-source = true
statistics = false
doctests = true
strictness = long
docstring-style = numpy

[pycodestyle]
max-line-length = 140

[options]
tests_require = pytest
install_requires =
    importlib-metadata; python_version > "3.7"
package_dir =
    src=
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli-name = trending_homebrew.trending_homebrew

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[mypy]
files=src,tests
enable_error_code = truthy-bool, redundant-expr, unused-awaitable
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_subclassing_any = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true

[pylint.config]
[MASTER]
extension-pkg-whitelist =
    numpy,
    pandas,
    keras,
    tensorflow,
    sklearn,
    matplotlib,
    scipy,
    pytest_aiohttp
[MESSAGES CONTROL]
disable = R, C
enable = E, W
jobs = 1
confidence = HIGH
[FORMAT]
max-line-length = 140
max-module-lines = 2000

[isort]
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER
default_section = LOCALFOLDER
known_third_party =
    numpy,
    pandas,
    keras,
    tensorflow,
    sklearn,
    matplotlib,
    scipy
lines_after_imports = 2
ensure_newline_before_comments = True
force_single_line = True
line_length = 140
known_first_party = trending_homebrew
default_section = THIRDPARTY
forced_separate = test_trending_homebrew
skip = .tox,.eggs,ci/templates,build,dist
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
profile = black
float_to_top = True

[tool:pytest]
collect_ignore = ['setup.py']
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
xfail_strict = true
testpaths = tests/


[matrix]
# This is the configuration for the `./bootstrap.py` script.
# It generates `.travis.yml`, `tox.ini` and `.appveyor.yml`.
#
# Syntax: [alias:] value [!variable[glob]] [&variable[glob]]
#
# alias:
#  - is used to generate the tox environment
#  - it's optional
#  - if not present the alias will be computed from the `value`
# value:
#  - a value of "-" means empty
# !variable[glob]:
#  - exclude the combination of the current `value` with
#    any value matching the `glob` in `variable`
#  - can use as many you want
# &variable[glob]:
#  - only include the combination of the current `value`
#    when there's a value matching `glob` in `variable`
#  - can use as many you want

python_versions =
    py37
    py38
    py39
    py310
    pypy3

dependencies =
#    1.4: Django==1.4.16 !python_versions[py3*]
#    1.5: Django==1.5.11
#    1.6: Django==1.6.8
#    1.7: Django==1.7.1 !python_versions[py26]
# Deps commented above are provided as examples. That's what you would use in a Django project.

coverage_flags =
    cover: true
    nocov: false
environment_variables =
    -
